--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,5 +7,16 @@ Author: Bradley R Buchsbaum
 License: GPL (>= 2)
 Maintainer: Bradley Buchsbaum <bbuchsbaum@gmail.com>
 Description: fmrireg is a package for the analysis of fmri image data
-Depends: R (>= 3.0.0), stats, methods, stringr, yaImpute, abind
-Imports: gtools, numDeriv, RANN
+Depends:
+    R (>= 3.0.0),
+    stats,
+    methods,
+    stringr,
+    yaImpute,
+    abind
+Imports:
+    gtools,
+    numDeriv,
+    RANN,
+    assertthat
+RoxygenNote: 5.0.1
