--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ S3method(elements,event_seq)
 S3method(elements,event_term)
 S3method(evaluate,HRF)
 S3method(evaluate,regressor)
+S3method(formula,event_term)
 S3method(global_onsets,sampling_frame)
 S3method(isContinuous,event_seq)
 S3method(levels,event_basis)
@@ -35,12 +36,12 @@ S3method(samples,sampling_frame)
 export(BSpline)
 export(EV)
 export(HRF)
-export(HRF.BSPLINE)
-export(HRF.GAMMA)
-export(HRF.GAUSSIAN)
-export(HRF.SPMG1)
-export(HRF.SPMG2)
-export(HRF.SPMG3)
+export(HRF_BSPLINE)
+export(HRF_GAMMA)
+export(HRF_GAUSSIAN)
+export(HRF_SPMG1)
+export(HRF_SPMG2)
+export(HRF_SPMG3)
 export(Poly)
 export(amplitudes)
 export(baseline)
@@ -63,11 +64,11 @@ export(event_variable)
 export(getHRF)
 export(global_onsets)
 export(hrf)
-export(hrf.bspline)
-export(hrf.gamma)
-export(hrf.gaussian)
-export(hrf.spmg1)
-export(hrf.time)
+export(hrf_bspline)
+export(hrf_gamma)
+export(hrf_gaussian)
+export(hrf_spmg1)
+export(hrf_time)
 export(hrfspec.construct)
 export(isContinuous)
 export(levels)
@@ -80,6 +81,7 @@ export(parentTerms)
 export(regressor)
 export(samples)
 export(sampling_frame)
+import(assertthat)
 import(checkmate)
 import(splines)
 importFrom(RANN,nn2)
