--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,9 @@ S3method(columns,event_set)
 S3method(columns,event_term)
 S3method(conditions,event_term)
 S3method(convolve,event_term)
-S3method(designMatrix,event_term)
-S3method(designMatrix,matrix_term)
+S3method(design_matrix,convolved_term)
+S3method(design_matrix,event_term)
+S3method(design_matrix,matrix_term)
 S3method(durations,regressor)
 S3method(elements,event_basis)
 S3method(elements,event_matrix)
@@ -18,6 +19,7 @@ S3method(elements,event_seq)
 S3method(elements,event_term)
 S3method(evaluate,HRF)
 S3method(evaluate,regressor)
+S3method(event_table,convolved_term)
 S3method(formula,event_term)
 S3method(global_onsets,sampling_frame)
 S3method(isContinuous,event_seq)
@@ -25,13 +27,16 @@ S3method(levels,event_basis)
 S3method(levels,event_factor)
 S3method(levels,event_set)
 S3method(levels,event_variable)
+S3method(longnames,convolved_term)
+S3method(nbasis,HRF)
+S3method(nbasis,convolved_term)
+S3method(nbasis,hrfspec)
 S3method(nbasis,regressor)
 S3method(onsets,regressor)
 S3method(parentTerms,event_term)
+S3method(plot,regressor)
 S3method(predict,BSpline)
 S3method(predict,Poly)
-S3method(print,event_term)
-S3method(print,regressor)
 S3method(samples,sampling_frame)
 export(BSpline)
 export(EV)
@@ -45,22 +50,35 @@ export(HRF_SPMG3)
 export(Poly)
 export(amplitudes)
 export(baseline)
-export(baselinespec.construct)
+export(block)
 export(cells)
 export(columns)
 export(conditions)
+export(construct.baselinespec)
+export(construct.blockspec)
+export(construct.hrfspec)
+export(construct.nuisancespec)
+export(construct.trialwisespec)
+export(contrast)
+export(contrast_set)
+export(contrast_weights)
 export(convolve)
 export(convolve_design)
 export(createHRF)
-export(designMatrix)
+export(data_chunks)
+export(design_matrix)
 export(durations)
 export(elements)
+export(estcon)
 export(evaluate)
 export(event_basis)
 export(event_factor)
 export(event_matrix)
+export(event_table)
 export(event_term)
 export(event_variable)
+export(fmri_dataset)
+export(fmri_glm)
 export(getHRF)
 export(global_onsets)
 export(hrf)
@@ -69,22 +87,30 @@ export(hrf_gamma)
 export(hrf_gaussian)
 export(hrf_spmg1)
 export(hrf_time)
-export(hrfspec.construct)
 export(isContinuous)
 export(levels)
+export(longnames)
 export(matrix_term)
 export(nbasis)
 export(nuisance)
-export(nuisancespec.construct)
 export(onsets)
 export(parentTerms)
+export(print.convolved_term)
+export(print.event_term)
+export(print.fmri_model)
+export(print.fmri_term)
+export(print.regressor)
 export(regressor)
 export(samples)
 export(sampling_frame)
+export(shortnames)
+export(trialwise)
 import(assertthat)
 import(checkmate)
+import(neuroim)
 import(splines)
 importFrom(RANN,nn2)
+importFrom(foreach,foreach)
 importFrom(numDeriv,grad)
 importFrom(splines,bs)
 importFrom(splines,ns)
