--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,9 @@ S3method(columns,event_seq)
 S3method(columns,event_set)
 S3method(columns,event_term)
 S3method(conditions,event_term)
+S3method(contrast_weights,convolved_term)
+S3method(contrast_weights,fmri_model)
+S3method(contrast_weights,fmri_term)
 S3method(convolve,event_term)
 S3method(design_matrix,convolved_term)
 S3method(design_matrix,event_term)
@@ -20,7 +23,6 @@ S3method(elements,event_term)
 S3method(evaluate,HRF)
 S3method(evaluate,regressor)
 S3method(event_table,convolved_term)
-S3method(formula,event_term)
 S3method(global_onsets,sampling_frame)
 S3method(isContinuous,event_seq)
 S3method(levels,event_basis)
@@ -79,6 +81,7 @@ export(event_term)
 export(event_variable)
 export(fmri_dataset)
 export(fmri_glm)
+export(formula.event_term)
 export(getHRF)
 export(global_onsets)
 export(hrf)
@@ -100,6 +103,7 @@ export(print.event_term)
 export(print.fmri_model)
 export(print.fmri_term)
 export(print.regressor)
+export(read_fmri_config)
 export(regressor)
 export(samples)
 export(sampling_frame)
@@ -110,7 +114,13 @@ import(checkmate)
 import(neuroim)
 import(splines)
 importFrom(RANN,nn2)
+importFrom(assertthat,assert_that)
 importFrom(foreach,foreach)
+importFrom(formula.tools,lhs)
+importFrom(formula.tools,op)
+importFrom(formula.tools,op.type)
+importFrom(formula.tools,rhs)
 importFrom(numDeriv,grad)
 importFrom(splines,bs)
 importFrom(splines,ns)
+importFrom(tibble,as_data_frame)
