--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,12 @@ S3method(columns,event_seq)
 S3method(columns,event_set)
 S3method(columns,event_term)
 S3method(conditions,event_term)
+S3method(conditions,fmri_model)
+S3method(contrast_weights,contrast_spec)
 S3method(contrast_weights,convolved_term)
 S3method(contrast_weights,fmri_model)
 S3method(contrast_weights,fmri_term)
+S3method(contrast_weights,poly_contrast_spec)
 S3method(convolve,event_term)
 S3method(design_matrix,convolved_term)
 S3method(design_matrix,event_term)
@@ -20,6 +23,7 @@ S3method(elements,event_basis)
 S3method(elements,event_matrix)
 S3method(elements,event_seq)
 S3method(elements,event_term)
+S3method(estcon,contrast)
 S3method(evaluate,HRF)
 S3method(evaluate,regressor)
 S3method(event_table,convolved_term)
@@ -40,6 +44,7 @@ S3method(plot,regressor)
 S3method(predict,BSpline)
 S3method(predict,Poly)
 S3method(samples,sampling_frame)
+S3method(terms,fmri_model)
 export(BSpline)
 export(EV)
 export(HRF)
@@ -98,10 +103,15 @@ export(nbasis)
 export(nuisance)
 export(onsets)
 export(parentTerms)
+export(poly_contrast)
+export(print.contrast)
+export(print.contrast_set)
+export(print.contrast_spec)
 export(print.convolved_term)
 export(print.event_term)
 export(print.fmri_model)
 export(print.fmri_term)
+export(print.poly_contrast_spec)
 export(print.regressor)
 export(read_fmri_config)
 export(regressor)
@@ -124,3 +134,4 @@ importFrom(numDeriv,grad)
 importFrom(splines,bs)
 importFrom(splines,ns)
 importFrom(tibble,as_data_frame)
+importFrom(tibble,as_tibble)
