--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,14 +7,21 @@ S3method(columns,event_basis)
 S3method(columns,event_seq)
 S3method(columns,event_set)
 S3method(columns,event_term)
+S3method(conditions,event_model)
 S3method(conditions,event_term)
 S3method(conditions,fmri_model)
+S3method(construct,baselinespec)
+S3method(construct,blockspec)
+S3method(construct,hrfspec)
+S3method(construct,nuisancespec)
+S3method(construct,trialwisespec)
 S3method(contrast_weights,contrast_spec)
 S3method(contrast_weights,convolved_term)
-S3method(contrast_weights,fmri_model)
+S3method(contrast_weights,event_model)
 S3method(contrast_weights,fmri_term)
 S3method(contrast_weights,poly_contrast_spec)
 S3method(convolve,event_term)
+S3method(design_matrix,baseline_model)
 S3method(design_matrix,convolved_term)
 S3method(design_matrix,event_term)
 S3method(design_matrix,matrix_term)
@@ -44,6 +51,8 @@ S3method(plot,regressor)
 S3method(predict,BSpline)
 S3method(predict,Poly)
 S3method(samples,sampling_frame)
+S3method(terms,baseline_model)
+S3method(terms,event_model)
 S3method(terms,fmri_model)
 export(BSpline)
 export(EV)
@@ -57,15 +66,13 @@ export(HRF_SPMG3)
 export(Poly)
 export(amplitudes)
 export(baseline)
+export(baseline_model)
 export(block)
+export(block_term)
 export(cells)
 export(columns)
 export(conditions)
-export(construct.baselinespec)
-export(construct.blockspec)
-export(construct.hrfspec)
-export(construct.nuisancespec)
-export(construct.trialwisespec)
+export(construct)
 export(contrast)
 export(contrast_set)
 export(contrast_weights)
@@ -81,11 +88,13 @@ export(evaluate)
 export(event_basis)
 export(event_factor)
 export(event_matrix)
+export(event_model)
 export(event_table)
 export(event_term)
 export(event_variable)
 export(fmri_dataset)
 export(fmri_glm)
+export(fmri_model)
 export(formula.event_term)
 export(getHRF)
 export(global_onsets)
@@ -108,6 +117,7 @@ export(print.contrast)
 export(print.contrast_set)
 export(print.contrast_spec)
 export(print.convolved_term)
+export(print.event_model)
 export(print.event_term)
 export(print.fmri_model)
 export(print.fmri_term)
@@ -130,6 +140,9 @@ importFrom(formula.tools,lhs)
 importFrom(formula.tools,op)
 importFrom(formula.tools,op.type)
 importFrom(formula.tools,rhs)
+importFrom(lazyeval,f_eval)
+importFrom(lazyeval,f_lhs)
+importFrom(lazyeval,f_rhs)
 importFrom(numDeriv,grad)
 importFrom(splines,bs)
 importFrom(splines,ns)
