--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(construct,blockspec)
 S3method(construct,hrfspec)
 S3method(construct,nuisancespec)
 S3method(construct,trialwisespec)
+S3method(contrast_weights,contrast_formula_spec)
 S3method(contrast_weights,contrast_spec)
 S3method(contrast_weights,convolved_term)
 S3method(contrast_weights,event_model)
@@ -41,6 +42,7 @@ S3method(levels,event_factor)
 S3method(levels,event_set)
 S3method(levels,event_variable)
 S3method(longnames,convolved_term)
+S3method(longnames,matrix_term)
 S3method(nbasis,HRF)
 S3method(nbasis,convolved_term)
 S3method(nbasis,hrfspec)
@@ -67,6 +69,7 @@ export(Poly)
 export(amplitudes)
 export(baseline)
 export(baseline_model)
+export(baseline_term)
 export(block)
 export(block_term)
 export(cells)
@@ -128,10 +131,12 @@ export(regressor)
 export(samples)
 export(sampling_frame)
 export(shortnames)
+export(split_by_block)
 export(trialwise)
 import(assertthat)
 import(checkmate)
 import(neuroim)
+import(shiny)
 import(splines)
 importFrom(RANN,nn2)
 importFrom(assertthat,assert_that)
@@ -140,6 +145,10 @@ importFrom(formula.tools,lhs)
 importFrom(formula.tools,op)
 importFrom(formula.tools,op.type)
 importFrom(formula.tools,rhs)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_string)
+importFrom(ggplot2,ggplot)
+importFrom(gmodels,estimable)
 importFrom(lazyeval,f_eval)
 importFrom(lazyeval,f_lhs)
 importFrom(lazyeval,f_rhs)
