--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ S3method(estcon,contrast)
 S3method(evaluate,HRF)
 S3method(evaluate,regressor)
 S3method(event_table,convolved_term)
+S3method(formula,event_term)
 S3method(global_onsets,sampling_frame)
 S3method(isContinuous,event_seq)
 S3method(levels,event_basis)
@@ -81,7 +82,6 @@ export(contrast_set)
 export(contrast_weights)
 export(convolve)
 export(convolve_design)
-export(createHRF)
 export(data_chunks)
 export(design_matrix)
 export(durations)
@@ -98,7 +98,6 @@ export(event_variable)
 export(fmri_dataset)
 export(fmri_glm)
 export(fmri_model)
-export(formula.event_term)
 export(getHRF)
 export(global_onsets)
 export(hrf)
