--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,7 @@ export(event_model)
 export(event_table)
 export(event_term)
 export(event_variable)
+export(fit_contrasts)
 export(fmri_dataset)
 export(fmri_glm)
 export(fmri_model)
