--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,4 +21,7 @@ Imports:
     assertthat,
     tibble
 RoxygenNote: 5.0.1
-Suggests: testthat
+Suggests: testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
