--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,11 @@ S3method(columns,event_basis)
 S3method(columns,event_seq)
 S3method(columns,event_set)
 S3method(columns,event_term)
+S3method(conditions,convolved_term)
 S3method(conditions,event_model)
 S3method(conditions,event_term)
 S3method(conditions,fmri_model)
+S3method(conditions,fmri_term)
 S3method(construct,baselinespec)
 S3method(construct,blockspec)
 S3method(construct,hrfspec)
@@ -39,7 +41,6 @@ S3method(estcon,contrast)
 S3method(evaluate,HRF)
 S3method(evaluate,regressor)
 S3method(event_table,convolved_term)
-S3method(formula,event_term)
 S3method(global_onsets,sampling_frame)
 S3method(isContinuous,event_seq)
 S3method(levels,event_basis)
@@ -56,6 +57,7 @@ S3method(nbasis,hrfspec)
 S3method(nbasis,regressor)
 S3method(onsets,regressor)
 S3method(parentTerms,event_term)
+S3method(plot,event_model)
 S3method(plot,regressor)
 S3method(predict,BSpline)
 S3method(predict,Poly)
@@ -108,6 +110,7 @@ export(fit_contrasts)
 export(fmri_dataset)
 export(fmri_lm)
 export(fmri_model)
+export(formula.event_term)
 export(getHRF)
 export(global_onsets)
 export(hrf)
@@ -150,6 +153,10 @@ import(shiny)
 import(splines)
 importFrom(RANN,nn2)
 importFrom(assertthat,assert_that)
+importFrom(dplyr,do)
+importFrom(dplyr,group_by)
+importFrom(dplyr,select)
+importFrom(dplyr,ungroup)
 importFrom(foreach,foreach)
 importFrom(formula.tools,lhs)
 importFrom(formula.tools,op)
@@ -157,7 +164,11 @@ importFrom(formula.tools,op.type)
 importFrom(formula.tools,rhs)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_line)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,xlab)
 importFrom(gmodels,estimable)
 importFrom(lazyeval,f_eval)
 importFrom(lazyeval,f_lhs)
@@ -167,3 +178,4 @@ importFrom(splines,bs)
 importFrom(splines,ns)
 importFrom(tibble,as_data_frame)
 importFrom(tibble,as_tibble)
+importFrom(tidyr,gather)
