blocked and lagged hrfs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ S3method(plot,regressor)
 S3method(predict,BSpline)
 S3method(predict,Poly)
 S3method(samples,sampling_frame)
+S3method(shortnames,convolved_term)
 S3method(split_by_block,sampling_frame)
 S3method(terms,baseline_model)
 S3method(terms,event_model)
@@ -111,9 +112,14 @@ export(fmri_dataset)
 export(fmri_lm)
 export(fmri_model)
 export(formula.event_term)
+export(gen_hrf)
+export(gen_hrf_blocked)
+export(gen_hrf_lagged)
+export(gen_hrf_set)
 export(getHRF)
 export(global_onsets)
 export(hrf)
+export(hrf_block)
 export(hrf_bspline)
 export(hrf_gamma)
 export(hrf_gaussian)
@@ -174,6 +180,7 @@ importFrom(lazyeval,f_eval)
 importFrom(lazyeval,f_lhs)
 importFrom(lazyeval,f_rhs)
 importFrom(numDeriv,grad)
+importFrom(purrr,partial)
 importFrom(splines,bs)
 importFrom(splines,ns)
 importFrom(tibble,as_data_frame)
