--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ S3method(nbasis,hrfspec)
 S3method(nbasis,regressor)
 S3method(onsets,regressor)
 S3method(parentTerms,event_term)
+S3method(plot,baseline_model)
 S3method(plot,event_model)
 S3method(plot,regressor)
 S3method(predict,BSpline)
