--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ S3method(contrast_weights,convolved_term)
 S3method(contrast_weights,event_model)
 S3method(contrast_weights,fmri_term)
 S3method(contrast_weights,poly_contrast_spec)
+S3method(contrast_weights,unit_contrast_formula_spec)
 S3method(convolve,event_term)
 S3method(design_matrix,baseline_model)
 S3method(design_matrix,baseline_term)
@@ -42,7 +43,7 @@ S3method(evaluate,HRF)
 S3method(evaluate,regressor)
 S3method(event_table,convolved_term)
 S3method(global_onsets,sampling_frame)
-S3method(isContinuous,event_seq)
+S3method(is_continuous,event_seq)
 S3method(levels,event_basis)
 S3method(levels,event_factor)
 S3method(levels,event_matrix)
@@ -56,7 +57,7 @@ S3method(nbasis,convolved_term)
 S3method(nbasis,hrfspec)
 S3method(nbasis,regressor)
 S3method(onsets,regressor)
-S3method(parentTerms,event_term)
+S3method(parent_terms,event_term)
 S3method(plot,baseline_model)
 S3method(plot,event_model)
 S3method(plot,regressor)
@@ -82,6 +83,7 @@ export(amplitudes)
 export(baseline)
 export(baseline_model)
 export(baseline_term)
+export(baseline_terms)
 export(block)
 export(block_term)
 export(blockids)
@@ -107,6 +109,7 @@ export(event_matrix)
 export(event_model)
 export(event_table)
 export(event_term)
+export(event_terms)
 export(event_variable)
 export(fit_contrasts)
 export(fmri_dataset)
@@ -126,14 +129,14 @@ export(hrf_gamma)
 export(hrf_gaussian)
 export(hrf_spmg1)
 export(hrf_time)
-export(isContinuous)
+export(is_continuous)
 export(levels)
 export(longnames)
 export(matrix_term)
 export(nbasis)
 export(nuisance)
 export(onsets)
-export(parentTerms)
+export(parent_terms)
 export(poly_contrast)
 export(print.contrast)
 export(print.contrast_set)
@@ -153,6 +156,7 @@ export(sampling_frame)
 export(shortnames)
 export(split_by_block)
 export(trialwise)
+export(unit_contrast)
 import(assertthat)
 import(checkmate)
 import(neuroim)
@@ -164,6 +168,8 @@ importFrom(dplyr,do)
 importFrom(dplyr,group_by)
 importFrom(dplyr,select)
 importFrom(dplyr,ungroup)
+importFrom(foreach,"%do%")
+importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(formula.tools,lhs)
 importFrom(formula.tools,op)
