--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,8 @@ S3method(contrast_weights,fmri_term)
 S3method(contrast_weights,poly_contrast_spec)
 S3method(contrast_weights,unit_contrast_formula_spec)
 S3method(convolve,event_term)
+S3method(data_chunks,matrix_dataset)
+S3method(data_chunks,volumetric_dataset)
 S3method(design_matrix,baseline_model)
 S3method(design_matrix,baseline_term)
 S3method(design_matrix,convolved_term)
@@ -42,8 +44,12 @@ S3method(estcon,contrast)
 S3method(evaluate,HRF)
 S3method(evaluate,regressor)
 S3method(event_table,convolved_term)
+S3method(formula,event_term)
 S3method(global_onsets,sampling_frame)
+S3method(is_categorical,event_seq)
+S3method(is_categorical,event_term)
 S3method(is_continuous,event_seq)
+S3method(is_continuous,event_term)
 S3method(levels,event_basis)
 S3method(levels,event_factor)
 S3method(levels,event_matrix)
@@ -71,6 +77,8 @@ S3method(terms,event_model)
 S3method(terms,fmri_model)
 export(BSpline)
 export(EV)
+export(FContrasts.convolved_term)
+export(Fcontrasts)
 export(HRF)
 export(HRF_BSPLINE)
 export(HRF_GAMMA)
@@ -115,7 +123,6 @@ export(fit_contrasts)
 export(fmri_dataset)
 export(fmri_lm)
 export(fmri_model)
-export(formula.event_term)
 export(gen_hrf)
 export(gen_hrf_blocked)
 export(gen_hrf_lagged)
@@ -129,9 +136,11 @@ export(hrf_gamma)
 export(hrf_gaussian)
 export(hrf_spmg1)
 export(hrf_time)
+export(is_categorical)
 export(is_continuous)
 export(levels)
 export(longnames)
+export(matrix_dataset)
 export(matrix_term)
 export(nbasis)
 export(nuisance)
