--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(columns,event_basis)
 S3method(columns,event_seq)
 S3method(columns,event_set)
 S3method(columns,event_term)
+S3method(conditions,baseline_model)
 S3method(conditions,convolved_term)
 S3method(conditions,event_model)
 S3method(conditions,event_term)
@@ -164,6 +165,7 @@ export(samples)
 export(sampling_frame)
 export(shortnames)
 export(split_by_block)
+export(term_indices)
 export(trialwise)
 export(unit_contrast)
 import(assertthat)
