--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,13 +22,12 @@ S3method(construct,blockspec)
 S3method(construct,hrfspec)
 S3method(construct,nuisancespec)
 S3method(construct,trialwisespec)
-S3method(contrast_weights,contrast_formula_spec)
 S3method(contrast_weights,contrast_spec)
 S3method(contrast_weights,convolved_term)
 S3method(contrast_weights,event_model)
 S3method(contrast_weights,fmri_term)
 S3method(contrast_weights,poly_contrast_spec)
-S3method(contrast_weights,unit_contrast_formula_spec)
+S3method(contrast_weights,unit_contrast_spec)
 S3method(convolve,event_term)
 S3method(data_chunks,matrix_dataset)
 S3method(data_chunks,volumetric_dataset)
@@ -103,7 +102,6 @@ export(cells)
 export(columns)
 export(conditions)
 export(construct)
-export(contrast)
 export(contrast_set)
 export(contrast_weights)
 export(convolve)
@@ -149,6 +147,7 @@ export(matrix_term)
 export(nbasis)
 export(nuisance)
 export(onsets)
+export(pair_contrast)
 export(parent_terms)
 export(poly_contrast)
 export(print.contrast)
