more tests, better coverage

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,8 +29,9 @@ S3method(contrast_weights,fmri_term)
 S3method(contrast_weights,poly_contrast_spec)
 S3method(contrast_weights,unit_contrast_spec)
 S3method(convolve,event_term)
+S3method(data_chunks,fmri_dataset)
+S3method(data_chunks,fmri_mem_dataset)
 S3method(data_chunks,matrix_dataset)
-S3method(data_chunks,volumetric_dataset)
 S3method(design_matrix,baseline_model)
 S3method(design_matrix,baseline_term)
 S3method(design_matrix,convolved_term)
@@ -124,6 +125,7 @@ export(exec_strategy)
 export(fit_contrasts)
 export(fmri_dataset)
 export(fmri_lm)
+export(fmri_mem_dataset)
 export(fmri_model)
 export(gen_hrf)
 export(gen_hrf_blocked)
@@ -148,6 +150,7 @@ export(nbasis)
 export(nuisance)
 export(onsets)
 export(pair_contrast)
+export(pairwise_contrasts)
 export(parent_terms)
 export(poly_contrast)
 export(print.contrast)
@@ -195,10 +198,12 @@ importFrom(lazyeval,f_eval)
 importFrom(lazyeval,f_lhs)
 importFrom(lazyeval,f_rhs)
 importFrom(magrittr,"%>%")
+importFrom(neuroim,series)
 importFrom(numDeriv,grad)
 importFrom(purrr,partial)
 importFrom(splines,bs)
 importFrom(splines,ns)
+importFrom(stringr,str_trim)
 importFrom(tibble,as_data_frame)
 importFrom(tibble,as_tibble)
 importFrom(tidyr,gather)
