--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,7 @@ S3method(construct,blockspec)
 S3method(construct,hrfspec)
 S3method(construct,nuisancespec)
 S3method(construct,trialwisespec)
-S3method(contrast_weights,contrast_spec)
+S3method(contrast_weights,contrast_formula_spec)
 S3method(contrast_weights,convolved_term)
 S3method(contrast_weights,event_model)
 S3method(contrast_weights,fmri_term)
