--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ S3method(contrast_weights,contrast_formula_spec)
 S3method(contrast_weights,convolved_term)
 S3method(contrast_weights,event_model)
 S3method(contrast_weights,fmri_term)
+S3method(contrast_weights,pair_contrast_spec)
 S3method(contrast_weights,poly_contrast_spec)
 S3method(contrast_weights,unit_contrast_spec)
 S3method(convolve,event_term)
