--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,10 +76,6 @@ S3method(nbasis,hrfspec)
 S3method(nbasis,regressor)
 S3method(onsets,regressor)
 S3method(parent_terms,event_term)
-S3method(plot,baseline_model)
-S3method(plot,event_model)
-S3method(plot,fmri_model)
-S3method(plot,regressor)
 S3method(predict,BSpline)
 S3method(predict,Poly)
 S3method(samples,sampling_frame)
@@ -113,6 +109,7 @@ export(cells)
 export(columns)
 export(conditions)
 export(construct)
+export(contrast)
 export(contrast_set)
 export(contrast_weights)
 export(convolve)
@@ -136,6 +133,7 @@ export(fmri_dataset)
 export(fmri_lm)
 export(fmri_mem_dataset)
 export(fmri_model)
+export(fmri_rlm)
 export(gen_hrf)
 export(gen_hrf_blocked)
 export(gen_hrf_lagged)
@@ -161,6 +159,10 @@ export(onsets)
 export(pair_contrast)
 export(pairwise_contrasts)
 export(parent_terms)
+export(plot.baseline_model)
+export(plot.event_model)
+export(plot.fmri_model)
+export(plot.regressor)
 export(poly_contrast)
 export(print.baseline_model)
 export(print.contrast)
