--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,10 @@ S3method(nbasis,hrfspec)
 S3method(nbasis,regressor)
 S3method(onsets,regressor)
 S3method(parent_terms,event_term)
+S3method(plot,baseline_model)
+S3method(plot,event_model)
+S3method(plot,fmri_model)
+S3method(plot,regressor)
 S3method(predict,BSpline)
 S3method(predict,Poly)
 S3method(samples,sampling_frame)
@@ -162,10 +166,6 @@ export(onsets)
 export(pair_contrast)
 export(pairwise_contrasts)
 export(parent_terms)
-export(plot.baseline_model)
-export(plot.event_model)
-export(plot.fmri_model)
-export(plot.regressor)
 export(poly_contrast)
 export(print.baseline_model)
 export(print.contrast)
