--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,15 +27,6 @@ S3method(construct,blockspec)
 S3method(construct,hrfspec)
 S3method(construct,nuisancespec)
 S3method(construct,trialwisespec)
-S3method(contrast_weights,contrast_diff_spec)
-S3method(contrast_weights,contrast_formula_spec)
-S3method(contrast_weights,convolved_term)
-S3method(contrast_weights,event_model)
-S3method(contrast_weights,fmri_model)
-S3method(contrast_weights,fmri_term)
-S3method(contrast_weights,pair_contrast_spec)
-S3method(contrast_weights,poly_contrast_spec)
-S3method(contrast_weights,unit_contrast_spec)
 S3method(convolve,event_term)
 S3method(data_chunks,fmri_dataset)
 S3method(data_chunks,fmri_mem_dataset)
@@ -85,9 +76,11 @@ S3method(plot,fmri_model)
 S3method(plot,regressor)
 S3method(predict,BSpline)
 S3method(predict,Poly)
+S3method(run,afni_lm_spec)
 S3method(samples,sampling_frame)
 S3method(shortnames,convolved_term)
 S3method(split_by_block,sampling_frame)
+S3method(term_names,event_model)
 S3method(terms,baseline_model)
 S3method(terms,event_model)
 S3method(terms,fmri_model)
@@ -103,6 +96,7 @@ export(HRF_SPMG1)
 export(HRF_SPMG2)
 export(HRF_SPMG3)
 export(Poly)
+export(afni_lm)
 export(amplitudes)
 export(baseline)
 export(baseline_model)
@@ -119,6 +113,14 @@ export(construct)
 export(contrast)
 export(contrast_set)
 export(contrast_weights)
+export(contrast_weights.contrast_diff_spec)
+export(contrast_weights.contrast_formula_spec)
+export(contrast_weights.convolved_term)
+export(contrast_weights.event_model)
+export(contrast_weights.fmri_model)
+export(contrast_weights.pair_contrast_spec)
+export(contrast_weights.poly_contrast_spec)
+export(contrast_weights.unit_contrast_spec)
 export(convolve)
 export(convolve_design)
 export(data_chunks)
@@ -169,6 +171,7 @@ export(parent_terms)
 export(poly_contrast)
 export(print.baseline_model)
 export(print.contrast)
+export(print.contrast_diff_spec)
 export(print.contrast_set)
 export(print.contrast_spec)
 export(print.convolved_term)
@@ -181,12 +184,14 @@ export(print.regressor)
 export(print.sampling_frame)
 export(read_fmri_config)
 export(regressor)
+export(run)
 export(samples)
 export(sampling_frame)
 export(shortnames)
 export(split_by_block)
 export(stats.fmri_lm)
 export(term_indices)
+export(term_names)
 export(trialwise)
 export(unit_contrast)
 import(assertthat)
