--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,14 @@ S3method(construct,blockspec)
 S3method(construct,hrfspec)
 S3method(construct,nuisancespec)
 S3method(construct,trialwisespec)
+S3method(contrast_weights,contrast_diff_spec)
+S3method(contrast_weights,contrast_formula_spec)
+S3method(contrast_weights,convolved_term)
+S3method(contrast_weights,event_model)
+S3method(contrast_weights,fmri_model)
+S3method(contrast_weights,pair_contrast_spec)
+S3method(contrast_weights,poly_contrast_spec)
+S3method(contrast_weights,unit_contrast_spec)
 S3method(convolve,event_term)
 S3method(data_chunks,fmri_dataset)
 S3method(data_chunks,fmri_mem_dataset)
@@ -84,6 +92,8 @@ S3method(term_names,event_model)
 S3method(terms,baseline_model)
 S3method(terms,event_model)
 S3method(terms,fmri_model)
+S3method(to_glt,contrast)
+S3method(write_glt,glt_contrast)
 export(BSpline)
 export(EV)
 export(FContrasts.convolved_term)
@@ -113,14 +123,6 @@ export(construct)
 export(contrast)
 export(contrast_set)
 export(contrast_weights)
-export(contrast_weights.contrast_diff_spec)
-export(contrast_weights.contrast_formula_spec)
-export(contrast_weights.convolved_term)
-export(contrast_weights.event_model)
-export(contrast_weights.fmri_model)
-export(contrast_weights.pair_contrast_spec)
-export(contrast_weights.poly_contrast_spec)
-export(contrast_weights.unit_contrast_spec)
 export(convolve)
 export(convolve_design)
 export(data_chunks)
@@ -192,8 +194,10 @@ export(split_by_block)
 export(stats.fmri_lm)
 export(term_indices)
 export(term_names)
+export(to_glt)
 export(trialwise)
 export(unit_contrast)
+export(write_glt)
 import(assertthat)
 import(neuroim)
 import(shiny)
