--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,6 +126,7 @@ export(contrast_weights)
 export(convolve)
 export(convolve_design)
 export(data_chunks)
+export(design_env)
 export(design_matrix)
 export(durations)
 export(elements)
