now depends on neuroim2 instead of neuroim

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(Fcontrasts,event_term)
 S3method(amplitudes,regressor)
 S3method(baseline_terms,fmri_model)
 S3method(blockids,sampling_frame)
+S3method(blocklens,event_model)
+S3method(blocklens,fmri_model)
 S3method(blocklens,sampling_frame)
 S3method(cells,convolved_term)
 S3method(cells,event_factor)
@@ -41,6 +43,7 @@ S3method(data_chunks,fmri_mem_dataset)
 S3method(data_chunks,matrix_dataset)
 S3method(design_matrix,baseline_model)
 S3method(design_matrix,baseline_term)
+S3method(design_matrix,block_term)
 S3method(design_matrix,convolved_term)
 S3method(design_matrix,event_model)
 S3method(design_matrix,event_model_spec)
@@ -180,6 +183,7 @@ export(print.contrast_spec)
 export(print.convolved_term)
 export(print.event_model)
 export(print.event_term)
+export(print.fmri_dataset)
 export(print.fmri_model)
 export(print.fmri_term)
 export(print.poly_contrast_spec)
@@ -226,6 +230,10 @@ importFrom(lazyeval,f_rhs)
 importFrom(magrittr,"%>%")
 importFrom(neuroim,series)
 importFrom(numDeriv,grad)
+importFrom(purrr,imap)
+importFrom(purrr,map_chr)
+importFrom(purrr,map_dbl)
+importFrom(purrr,map_lgl)
 importFrom(purrr,partial)
 importFrom(splines,bs)
 importFrom(splines,ns)
