--- a/NAMESPACE
+++ b/NAMESPACE
@@ -204,7 +204,7 @@ export(trialwise)
 export(unit_contrast)
 export(write_glt)
 import(assertthat)
-import(neuroim)
+import(neuroim2)
 import(shiny)
 import(splines)
 importFrom(assertthat,assert_that)
@@ -228,7 +228,7 @@ importFrom(lazyeval,f_eval)
 importFrom(lazyeval,f_lhs)
 importFrom(lazyeval,f_rhs)
 importFrom(magrittr,"%>%")
-importFrom(neuroim,series)
+importFrom(neuroim2,series)
 importFrom(numDeriv,grad)
 importFrom(purrr,imap)
 importFrom(purrr,map_chr)
