censor added to afni_lm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(Fcontrasts,event_term)
 S3method(amplitudes,regressor)
 S3method(baseline_terms,fmri_model)
 S3method(blockids,sampling_frame)
+S3method(blocklens,event_model)
+S3method(blocklens,fmri_model)
 S3method(blocklens,sampling_frame)
 S3method(cells,convolved_term)
 S3method(cells,event_factor)
@@ -41,6 +43,7 @@ S3method(data_chunks,fmri_mem_dataset)
 S3method(data_chunks,matrix_dataset)
 S3method(design_matrix,baseline_model)
 S3method(design_matrix,baseline_term)
+S3method(design_matrix,block_term)
 S3method(design_matrix,convolved_term)
 S3method(design_matrix,event_model)
 S3method(design_matrix,event_model_spec)
@@ -84,8 +87,20 @@ S3method(plot,fmri_model)
 S3method(plot,regressor)
 S3method(predict,BSpline)
 S3method(predict,Poly)
+S3method(print,baseline_model)
+S3method(print,contrast)
+S3method(print,contrast_diff_spec)
+S3method(print,contrast_set)
+S3method(print,contrast_spec)
+S3method(print,convolved_term)
+S3method(print,event_model)
+S3method(print,event_term)
+S3method(print,fmri_model)
+S3method(print,fmri_term)
+S3method(print,poly_contrast_spec)
+S3method(print,regressor)
+S3method(print,sampling_frame)
 S3method(run,afni_lm_spec)
-S3method(samples,sampling_frame)
 S3method(shortnames,convolved_term)
 S3method(split_by_block,sampling_frame)
 S3method(term_names,event_model)
@@ -94,6 +109,9 @@ S3method(terms,event_model)
 S3method(terms,fmri_model)
 S3method(to_glt,contrast)
 S3method(write_glt,glt_contrast)
+export("##")
+export("1.")
+export("don't")
 export(BSpline)
 export(EV)
 export(FContrasts.convolved_term)
@@ -106,8 +124,10 @@ export(HRF_SPMG1)
 export(HRF_SPMG2)
 export(HRF_SPMG3)
 export(Poly)
+export(TODO)
 export(afni_lm)
 export(amplitudes)
+export(at)
 export(baseline)
 export(baseline_model)
 export(baseline_term)
@@ -152,6 +172,7 @@ export(gen_hrf_lagged)
 export(gen_hrf_set)
 export(getHRF)
 export(global_onsets)
+export(happen)
 export(hrf)
 export(hrf_block)
 export(hrf_bspline)
@@ -172,32 +193,23 @@ export(pair_contrast)
 export(pairwise_contrasts)
 export(parent_terms)
 export(poly_contrast)
-export(print.baseline_model)
-export(print.contrast)
-export(print.contrast_diff_spec)
-export(print.contrast_set)
-export(print.contrast_spec)
-export(print.convolved_term)
-export(print.event_model)
-export(print.event_term)
-export(print.fmri_model)
-export(print.fmri_term)
-export(print.poly_contrast_spec)
-export(print.regressor)
-export(print.sampling_frame)
 export(read_fmri_config)
 export(regressor)
 export(run)
 export(samples)
 export(sampling_frame)
+export(screwy)
 export(shortnames)
 export(split_by_block)
+export(start)
 export(stats.fmri_lm)
 export(term_indices)
 export(term_names)
+export(things)
 export(to_glt)
 export(trialwise)
 export(unit_contrast)
+export(when)
 export(write_glt)
 import(assertthat)
 import(neuroim)
