--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,12 +95,14 @@ S3method(print,contrast_spec)
 S3method(print,convolved_term)
 S3method(print,event_model)
 S3method(print,event_term)
+S3method(print,fmri_dataset)
 S3method(print,fmri_model)
 S3method(print,fmri_term)
 S3method(print,poly_contrast_spec)
 S3method(print,regressor)
 S3method(print,sampling_frame)
 S3method(run,afni_lm_spec)
+S3method(samples,sampling_frame)
 S3method(shortnames,convolved_term)
 S3method(split_by_block,sampling_frame)
 S3method(term_names,event_model)
@@ -121,10 +123,8 @@ export(HRF_SPMG1)
 export(HRF_SPMG2)
 export(HRF_SPMG3)
 export(Poly)
-export(TODO)
 export(afni_lm)
 export(amplitudes)
-export(at)
 export(baseline)
 export(baseline_model)
 export(baseline_term)
@@ -169,7 +169,6 @@ export(gen_hrf_lagged)
 export(gen_hrf_set)
 export(getHRF)
 export(global_onsets)
-export(happen)
 export(hrf)
 export(hrf_block)
 export(hrf_bspline)
@@ -190,37 +189,19 @@ export(pair_contrast)
 export(pairwise_contrasts)
 export(parent_terms)
 export(poly_contrast)
-export(print.baseline_model)
-export(print.contrast)
-export(print.contrast_diff_spec)
-export(print.contrast_set)
-export(print.contrast_spec)
-export(print.convolved_term)
-export(print.event_model)
-export(print.event_term)
-export(print.fmri_dataset)
-export(print.fmri_model)
-export(print.fmri_term)
-export(print.poly_contrast_spec)
-export(print.regressor)
-export(print.sampling_frame)
 export(read_fmri_config)
 export(regressor)
 export(run)
 export(samples)
 export(sampling_frame)
-export(screwy)
 export(shortnames)
 export(split_by_block)
-export(start)
 export(stats.fmri_lm)
 export(term_indices)
 export(term_names)
-export(things)
 export(to_glt)
 export(trialwise)
 export(unit_contrast)
-export(when)
 export(write_glt)
 import(assertthat)
 import(neuroim2)
