--- a/NAMESPACE
+++ b/NAMESPACE
@@ -204,7 +204,9 @@ export(trialwise)
 export(unit_contrast)
 export(write_glt)
 import(assertthat)
+import(map_int)
 import(neuroim2)
+import(purrr)
 import(shiny)
 import(splines)
 importFrom(assertthat,assert_that)
