--- a/NAMESPACE
+++ b/NAMESPACE
@@ -204,9 +204,7 @@ export(trialwise)
 export(unit_contrast)
 export(write_glt)
 import(assertthat)
-import(map_int)
 import(neuroim2)
-import(purrr)
 import(shiny)
 import(splines)
 importFrom(assertthat,assert_that)
@@ -235,6 +233,7 @@ importFrom(numDeriv,grad)
 importFrom(purrr,imap)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
+importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,partial)
 importFrom(splines,bs)
