make travis work

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@
 language: R
 sudo: false
 cache: packages
+Imports: rflann
+Remotes: YeeJeremy/rflann
 r_github_packages:
   - r-lib/covr
 after_success:
