--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,12 +18,16 @@ Imports:
     rflann,
     assertthat,
     stringr,
-    tibble
+    tibble,
+    rflann
 RoxygenNote: 6.0.1.9000
 Suggests: testthat,
     knitr,
     rmarkdown,
-    roxygen2
+    roxygen2,
+    covr
+Remotes: 
+  YeeJeremy/rflann
 VignetteBuilder: knitr
 URL: https://github.com/bbuchsbaum/fmrireg
 BugReports: https://github.com/bbuchsbaum/fmrireg/issues
