--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ language: R
 sudo: false
 cache: packages
 Imports: rflann
-Remotes: YeeJeremy/rflann,
-  bbuchsbaum/neuroim2
+Remotes: 
+  - YeeJeremy/rflann,
+  - bbuchsbaum/neuroim2
 r_github_packages:
   - r-lib/covr
 after_success:
