--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Imports:
     stringr,
     tibble,
     neuroim2,
-    purrr
+    purrr,
+    foreach
 RoxygenNote: 6.0.1.9000
 Suggests: testthat,
     knitr,
