--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,7 +57,9 @@ S3method(elements,event_term)
 S3method(estcon,contrast)
 S3method(evaluate,HRF)
 S3method(evaluate,hrfspec)
+S3method(evaluate,null_regressor)
 S3method(evaluate,regressor)
+S3method(evaluate,single_trial_regressor)
 S3method(event_table,convolved_term)
 S3method(event_table,event_term)
 S3method(event_terms,fmri_model)
@@ -81,29 +83,12 @@ S3method(nbasis,hrfspec)
 S3method(nbasis,regressor)
 S3method(onsets,regressor)
 S3method(parent_terms,event_term)
-S3method(plot,baseline_model)
-S3method(plot,event_model)
-S3method(plot,fmri_model)
-S3method(plot,regressor)
 S3method(predict,BSpline)
 S3method(predict,Poly)
-S3method(print,baseline_model)
-S3method(print,contrast)
-S3method(print,contrast_diff_spec)
-S3method(print,contrast_set)
-S3method(print,contrast_spec)
-S3method(print,convolved_term)
-S3method(print,event_model)
-S3method(print,event_term)
-S3method(print,fmri_dataset)
-S3method(print,fmri_model)
-S3method(print,fmri_term)
-S3method(print,poly_contrast_spec)
-S3method(print,regressor)
-S3method(print,sampling_frame)
 S3method(run,afni_lm_spec)
 S3method(samples,sampling_frame)
 S3method(shortnames,convolved_term)
+S3method(shortnames,matrix_term)
 S3method(split_by_block,sampling_frame)
 S3method(term_names,event_model)
 S3method(terms,baseline_model)
@@ -163,6 +148,7 @@ export(fmri_lm)
 export(fmri_mem_dataset)
 export(fmri_model)
 export(fmri_rlm)
+export(gen_afni_lm)
 export(gen_hrf)
 export(gen_hrf_blocked)
 export(gen_hrf_lagged)
@@ -188,13 +174,32 @@ export(onsets)
 export(pair_contrast)
 export(pairwise_contrasts)
 export(parent_terms)
+export(plot.baseline_model)
+export(plot.event_model)
+export(plot.fmri_model)
+export(plot.regressor)
 export(poly_contrast)
+export(print.baseline_model)
+export(print.contrast)
+export(print.contrast_diff_spec)
+export(print.contrast_set)
+export(print.contrast_spec)
+export(print.convolved_term)
+export(print.event_model)
+export(print.event_term)
+export(print.fmri_dataset)
+export(print.fmri_model)
+export(print.fmri_term)
+export(print.poly_contrast_spec)
+export(print.regressor)
+export(print.sampling_frame)
 export(read_fmri_config)
 export(regressor)
 export(run)
 export(samples)
 export(sampling_frame)
 export(shortnames)
+export(single_trial_regressor)
 export(split_by_block)
 export(stats.fmri_lm)
 export(term_indices)
