matrix_dataset and fmri_mem_dataset examples and refinement

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ S3method(event_table,convolved_term)
 S3method(event_table,event_term)
 S3method(event_terms,fmri_model)
 S3method(formula,event_term)
+S3method(get_formula,fmri_model)
 S3method(global_onsets,sampling_frame)
 S3method(is_categorical,event_seq)
 S3method(is_categorical,event_term)
@@ -90,6 +91,7 @@ S3method(samples,sampling_frame)
 S3method(shortnames,convolved_term)
 S3method(shortnames,matrix_term)
 S3method(split_by_block,sampling_frame)
+S3method(term_matrices,fmri_model)
 S3method(term_names,event_model)
 S3method(terms,baseline_model)
 S3method(terms,event_model)
