--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,10 @@ S3method("-",contrast_spec)
 S3method(Fcontrasts,event_model)
 S3method(Fcontrasts,event_term)
 S3method(amplitudes,regressor)
+S3method(as.character,AFNI_HRF)
 S3method(baseline_terms,fmri_model)
+S3method(blockids,convolved_term)
+S3method(blockids,event_term)
 S3method(blockids,sampling_frame)
 S3method(blocklens,event_model)
 S3method(blocklens,fmri_model)
@@ -18,12 +21,14 @@ S3method(columns,event_matrix)
 S3method(columns,event_seq)
 S3method(columns,event_set)
 S3method(columns,event_term)
+S3method(conditions,afni_hrf_convolved_term)
 S3method(conditions,baseline_model)
 S3method(conditions,convolved_term)
 S3method(conditions,event_model)
 S3method(conditions,event_term)
 S3method(conditions,fmri_model)
 S3method(conditions,fmri_term)
+S3method(construct,afni_hrfspec)
 S3method(construct,baselinespec)
 S3method(construct,blockspec)
 S3method(construct,hrfspec)
@@ -76,12 +81,17 @@ S3method(levels,event_matrix)
 S3method(levels,event_set)
 S3method(levels,event_term)
 S3method(levels,event_variable)
+S3method(longnames,afni_hrf_convolved_term)
 S3method(longnames,convolved_term)
+S3method(longnames,event_term)
 S3method(longnames,matrix_term)
+S3method(nbasis,AFNI_HRF)
 S3method(nbasis,HRF)
 S3method(nbasis,convolved_term)
 S3method(nbasis,hrfspec)
 S3method(nbasis,regressor)
+S3method(onsets,convolved_term)
+S3method(onsets,event_term)
 S3method(onsets,regressor)
 S3method(parent_terms,event_term)
 S3method(predict,BSpline)
@@ -91,6 +101,7 @@ S3method(samples,sampling_frame)
 S3method(shortnames,convolved_term)
 S3method(shortnames,matrix_term)
 S3method(split_by_block,sampling_frame)
+S3method(split_onsets,event_term)
 S3method(term_matrices,fmri_model)
 S3method(term_names,event_model)
 S3method(terms,baseline_model)
@@ -98,6 +109,7 @@ S3method(terms,event_model)
 S3method(terms,fmri_model)
 S3method(to_glt,contrast)
 S3method(write_glt,glt_contrast)
+export(AFNI_HRF)
 export(BSpline)
 export(EV)
 export(FContrasts.convolved_term)
@@ -110,6 +122,7 @@ export(HRF_SPMG1)
 export(HRF_SPMG2)
 export(HRF_SPMG3)
 export(Poly)
+export(afni_hrf)
 export(afni_lm)
 export(amplitudes)
 export(baseline)
@@ -120,6 +133,7 @@ export(block)
 export(block_term)
 export(blockids)
 export(blocklens)
+export(build_afni_stims)
 export(cells)
 export(columns)
 export(conditions)
@@ -159,9 +173,11 @@ export(getHRF)
 export(global_onsets)
 export(hrf)
 export(hrf_block)
+export(hrf_blocked)
 export(hrf_bspline)
 export(hrf_gamma)
 export(hrf_gaussian)
+export(hrf_lagged)
 export(hrf_spmg1)
 export(hrf_time)
 export(is_categorical)
@@ -181,6 +197,8 @@ export(plot.event_model)
 export(plot.fmri_model)
 export(plot.regressor)
 export(poly_contrast)
+export(print.afni_hrf_convolved_term)
+export(print.afni_lm_spec)
 export(print.baseline_model)
 export(print.contrast)
 export(print.contrast_diff_spec)
@@ -192,6 +210,7 @@ export(print.event_term)
 export(print.fmri_dataset)
 export(print.fmri_model)
 export(print.fmri_term)
+export(print.matrix_dataset)
 export(print.poly_contrast_spec)
 export(print.regressor)
 export(print.sampling_frame)
@@ -203,6 +222,7 @@ export(sampling_frame)
 export(shortnames)
 export(single_trial_regressor)
 export(split_by_block)
+export(split_onsets)
 export(stats.fmri_lm)
 export(term_indices)
 export(term_names)
