--- a/NAMESPACE
+++ b/NAMESPACE
@@ -230,6 +230,7 @@ export(to_glt)
 export(trialwise)
 export(unit_contrast)
 export(write_glt)
+import(RANN)
 import(assertthat)
 import(neuroim2)
 import(shiny)
