--- a/NAMESPACE
+++ b/NAMESPACE
@@ -96,6 +96,7 @@ S3method(onsets,regressor)
 S3method(parent_terms,event_term)
 S3method(predict,BSpline)
 S3method(predict,Poly)
+S3method(read_confounds,bids_source)
 S3method(run,afni_lm_spec)
 S3method(samples,sampling_frame)
 S3method(shortnames,convolved_term)
@@ -129,6 +130,7 @@ export(baseline)
 export(baseline_model)
 export(baseline_term)
 export(baseline_terms)
+export(bids_source)
 export(block)
 export(block_term)
 export(blockids)
@@ -214,6 +216,7 @@ export(print.matrix_dataset)
 export(print.poly_contrast_spec)
 export(print.regressor)
 export(print.sampling_frame)
+export(read_confounds)
 export(read_fmri_config)
 export(regressor)
 export(run)
