--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ S3method(levels,event_term)
 S3method(levels,event_variable)
 S3method(longnames,afni_hrf_convolved_term)
 S3method(longnames,convolved_term)
+S3method(longnames,event_model)
 S3method(longnames,event_term)
 S3method(longnames,matrix_term)
 S3method(nbasis,AFNI_HRF)
@@ -95,11 +96,13 @@ S3method(onsets,event_term)
 S3method(onsets,regressor)
 S3method(parent_terms,event_term)
 S3method(predict,BSpline)
+S3method(predict,Ident)
 S3method(predict,Poly)
 S3method(read_confounds,bids_source)
 S3method(run,afni_lm_spec)
 S3method(samples,sampling_frame)
 S3method(shortnames,convolved_term)
+S3method(shortnames,event_model)
 S3method(shortnames,matrix_term)
 S3method(split_by_block,sampling_frame)
 S3method(split_onsets,event_term)
@@ -122,6 +125,7 @@ export(HRF_GAUSSIAN)
 export(HRF_SPMG1)
 export(HRF_SPMG2)
 export(HRF_SPMG3)
+export(Ident)
 export(Poly)
 export(afni_hrf)
 export(afni_lm)
