--- a/NAMESPACE
+++ b/NAMESPACE
@@ -148,6 +148,7 @@ export(contrast)
 export(contrast_set)
 export(contrast_weights)
 export(convolve)
+export(convolve_block)
 export(convolve_design)
 export(data_chunks)
 export(design_env)
@@ -178,7 +179,6 @@ export(gen_hrf_set)
 export(getHRF)
 export(global_onsets)
 export(hrf)
-export(hrf_block)
 export(hrf_blocked)
 export(hrf_bspline)
 export(hrf_gamma)
